# low_complexity_corner_detection

./: CMakeLists.txt  config.json  main.cpp  readme.md
image/: ,.
inc/: corner_detect.h
prebuilt/: corner_detect
src/: corner_detect.cpp
